--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,8 @@
 [phases.setup]
-nixPkgs = ["python312", "postgresql"]
+nixPkgs = ["python312"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
-
-[phases.build]
-cmds = []
+cmds = ["python3.12 -m pip install --upgrade pip", "python3.12 -m pip install -r requirements.txt"]
 
 [start]
-cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+cmd = "python3.12 -m uvicorn main:app --host 0.0.0.0 --port $PORT"
